Handle register error message when the username is taken

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -175,3 +175,4 @@
 "Type your password" = "Type your password";
 "Password incorrect label text" = "At least 8 characters, one number, one uppercase character and one special character @$!%*?&";
 "Forgot Your Password?" = "Forgot Your Password?";
+"Username taken error message" = "The username is taken, please use a different one";
