--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -175,3 +175,4 @@
 "Type your password" = "Introduceți parola";
 "Password incorrect label text" = "cel puțin 8 caractere, un număr, o majusculă și un caracter special @$!%*?&";
 "Forgot Your Password?" = "Ați uitat parola?";
+"Username taken error message" = "The username is taken, please use a different one";
