Email not confirmed error handling

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -176,3 +176,4 @@
 "Password incorrect label text" = "At least 8 characters, one number, one uppercase character and one special character @$!%*?&";
 "Forgot Your Password?" = "Forgot Your Password?";
 "Username taken error message" = "The username is taken, please use a different one";
+"Email Not Confirmed Error Message" = "Please check your email and confirm yor account before logging in";
