--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -176,3 +176,4 @@
 "Password incorrect label text" = "cel puțin 8 caractere, un număr, o majusculă și un caracter special @$!%*?&";
 "Forgot Your Password?" = "Ați uitat parola?";
 "Username taken error message" = "The username is taken, please use a different one";
+"Email Not Confirmed Error Message" = "Please check your email and confirm yor account before logging in";
