add link to referral FAQ

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -104,6 +104,7 @@
 "ADD WALLET" = "ADD WALLET";
 "Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies.";
 "Remove Unavailable Offers Alert" = "Please tap edit and remove all unavailable offers (greyed out)";
+"About Referral Program" = "About Referral Program";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
