--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -104,6 +104,7 @@
 "ADD WALLET" = "ADD WALLET"; //TODO -> translate
 "Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies."; //TODO -> translate
 "Remove Unavailable Offers Alert" = "Please tap edit and remove all unavailable offers (greyed out)";
+"About Referral Program" = "Despre programul de Referral";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
