--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 "Generic Error Message" = "Something went wrong. Please try again!";
 "Login Failed Error Message" = "Login failed. Please try again!";
-"Invalid Login Error Message" = "User account invalid";
+"Invalid Login Error Message" = "Invalid user account";
 "Test Proxy Message" = "Try it now for free!";
 "Test Proxy Name" = "Free Test Proxy";
 "active" = "active";
