refactor error handling -> handle errors in one place

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -7,6 +7,8 @@
 */
 
 "Generic Error Message" = "Something went wrong. Please try again!";
+"Lockdown Account Error Message" = "You can't perform this change because your account is in Lockdown Mode.";
+"Login Failed Lockdown Error Message" = "You can't login because your account is in Lockdown Mode.";
 "Login Failed Error Message" = "Login failed. Please try again!";
 "Invalid Login Error Message" = "Invalid user account";
 "Test Proxy Message" = "Try it now for free!";
