--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -7,6 +7,8 @@
 */
 
 "Generic Error Message" = "Ceva nu a mers bine, încercați înca odată!";
+"Lockdown Account Error Message" = "You can't perform this change because your account is in Lockdown Mode."; //TODO
+"Login Failed Lockdown Error Message" = "You can't login because your account is in Lockdown Mode."; //TODO
 "Login Failed Error Message" = "Login eșuat. Incercați incă odată!";
 "Invalid Login Error Message" = "Contul este invalid";
 "Test Proxy Message" = "încercați-l acum gratis!";
