Marketplace scroll fix, particles animation fix, wrong labels fix

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -158,7 +158,7 @@
 "Welcome to" = "Welcome to";
 "Register" = "Register";
 "Login" = "Login";
-"View or Marketplace" = "View or Marketplace";
+"View on Marketplace" = "View on Marketplace";
 
 //Serach Storyboard
 "Country" = "Country";
