--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -130,9 +130,9 @@
 "Your Job as Provider" = "Your Job as Provider";
 "Providers Dashboard" = "Providers Dashboard?";
 "Package Builder" = "Package Builder?";
-"Your Job as Provider Text" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in consectetur nunc. Aenean eu convallis eros, a semper felis. Duis eget eros vel tortor lobortis convallis at sed ante. Aliquam eget risus nibh.";
-"Providers Dashboard Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
-"Package Builder Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
+"Your Job as Provider Text" = "Whether you have proxies or IPs, we’ve got you covered. You submit your resources, we set you up!";
+"Providers Dashboard Text" = "Control everything that happens to your proxies";
+"Package Builder Text" = "It’s easy to create your proxy offers. Start now!";
 
 //Company States
 "Your corporate data is being reviewed" = "Your corporate data is being reviewed";
@@ -158,7 +158,7 @@
 "Welcome to" = "Bine ați venit la";
 "Register" = "Înregistrare";
 "Login" = "Logare";
-"View or Marketplace" = "Vizualizare Marketplace";
+"View on Marketplace" = "Vizualizare Marketplace";
 
 //Serach Storyboard
 "Country" = "Țara";
