Update for inapp purchase support

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -103,8 +103,8 @@
 "IP Not Supported Error Message" = "Your current IP address is not supported";
 "Order" = "Order";
 "Sign In Message" = "Before you rent proxies, you need to Login";
-"ADD WALLET" = "ADD WALLET";
-"Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies.";
+"ADD WALLET" = "CLOSE";
+"Add Wallet Message" = "You need to purchase IPSX coins in order to rent proxies.";
 "Remove Unavailable Offers Alert" = "Please tap edit and remove all unavailable offers (greyed out)";
 "About Referral Program" = "About Referral Program";
 
